<resources>
    <string name="app_name">Open_Close</string>
    <string name="title_Activity_huella">fingerprint</string>
    <string name="action_settings">Settings</string>
    <string name="Titulo">Open Close</string>
    <string name="ingUsuario">Ingrese Usuario</string>
    <string name="clave">Ingrese Clave</string>
    <string name="acceder">Acceder</string>
    <string name="huella">Huella Dactilar</string>
    <string name="ver">V1.2</string>
    <string name="cancelar">Cancelar</string>
</resources>
