<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="20dp"
    android:paddingTop="100dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Titulo"
        android:textColor="@android:color/holo_blue_dark"
        android:textIsSelectable="false"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.212"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.084" />

    <EditText
        android:id="@+id/eduser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/ingUsuario"
        android:inputType="textMultiLine"
        tools:layout_editor_absoluteX="53dp"
        tools:layout_editor_absoluteY="161dp" />

    <EditText
        android:id="@+id/edclave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/clave"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="51dp"
        tools:layout_editor_absoluteY="255dp" />

    <Button
        android:id="@+id/btnacceder"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@android:color/holo_blue_light"
        android:text="@string/acceder"
        android:textColor="@color/text_color_primary"
        android:textSize="20dp" />

    <Button
        android:id="@+id/btnHuella"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@android:color/holo_blue_light"
        android:text="@string/huella"
        android:textColor="@color/text_color_primary"
        android:textSize="20dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="37dp"
            android:text="@string/ver" />
    </RelativeLayout>


</LinearLayout>

